# snake

./: .gitignore  CMakeLists.txt  build.sh  readme.md
src/: conio_linux.cpp  controller.cpp  food.cpp  map.cpp  point.cpp  snake.cpp  startinterface.cpp  tools.cpp
src/include/: conio_linux.h  food.h  point.h  snake.h  startinterface.h  tools.h
